--- a/step01_PandasBasic_s.ipynb
+++ b/step01_PandasBasic_s.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,24 +187,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'하나'"
+       "a    하나\n",
+       "b     둘\n",
+       "c     셋\n",
+       "dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "array = pd.Series(['하나','둘','셋'], index = ['a','b','c'])\n",
-    "array\n",
-    "array['a']"
+    "array"
    ]
   },
   {
@@ -2087,88 +2089,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>이름</th>\n",
-       "      <th>나이</th>\n",
-       "      <th>직업</th>\n",
-       "      <th>hobby</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>신동엽</td>\n",
-       "      <td>20</td>\n",
-       "      <td>연예인</td>\n",
-       "      <td>music</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>유재석</td>\n",
-       "      <td>41</td>\n",
-       "      <td>교수</td>\n",
-       "      <td>art</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>김새롬</td>\n",
-       "      <td>18</td>\n",
-       "      <td>학생</td>\n",
-       "      <td>study</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>이영자</td>\n",
-       "      <td>45</td>\n",
-       "      <td>상담사</td>\n",
-       "      <td>talk</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>강호동</td>\n",
-       "      <td>38</td>\n",
-       "      <td>연예인</td>\n",
-       "      <td>talk</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    이름  나이   직업  hobby\n",
-       "0  신동엽  20  연예인  music\n",
-       "1  유재석  41   교수    art\n",
-       "2  김새롬  18   학생  study\n",
-       "3  이영자  45  상담사   talk\n",
-       "4  강호동  38  연예인   talk"
-      ]
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-217345771669>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'dataset/02.friends.csv'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
     }
    ],
    "source": [
@@ -2634,7 +2567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2713,7 +2646,7 @@
        "4  강호동   38  연예인   talk"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2725,6 +2658,7 @@
     "                     {'name': '이영자', 'age' : 45, 'job': '상담사', 'hobby' : 'talk'},\n",
     "                     {'name' :  '강호동', 'age' : 38, 'job' : '연예인', 'hobby' : 'talk'}]\n",
     "type(friend_dict_list)\n",
+    "friend_dict_list = pd.DataFrame(friend_dict_list)\n",
     "friend_dict_list"
    ]
   },
@@ -5529,7 +5463,7 @@
    ],
    "source": [
     "# index 재정리가 필요\n",
-    "\n",
+    "# concat([결합시킬 데이터들], axis, ignore_index = True)\n",
     "df_all = pd.concat([df1,df2],axis=0, ignore_index=True)\n",
     "df_all"
    ]
